syntax = "proto3";

package abi;

message ImageSpec {repeated Spec specs = 1;}

message Spec {
    oneof data {
        Crop crop = 1;
        Resize resize = 2;
        Fliph fliph = 3;
        Flipv flipv = 4;
        Contrast contrast = 5;
        Filter filter = 6;
        Watermark watermark = 7;
    }
}

message Crop {
    uint32 x1 = 1;
    uint32 y1 = 2;
    uint32 x2 = 3;
    uint32 y2 = 4;
}

message Resize {
    uint32 width = 1;
    uint32 height = 2;

    enum ResizeType {
        NORMAL = 0;
        SEAM_CARVE = 1;
    }

    ResizeType rtype = 3;

    enum SampleFilter {
        UNDEFINED = 0;
        NEREAST = 1;
        TRIANGLE = 2;
        CATMULL_ROM = 3;
        LANCZOS3 = 4;
        GAUSSIAN = 5;
    }
    SampleFilter filter = 4;
}

message Fliph {}

message Flipv {}

message Contrast {float contrast = 1;}

message Watermark {
    uint32 x = 1;
    uint32 y = 2;
}

message Filter {
    enum Filter {
        UNSPECIFIED = 0;
        OCEANIC = 1;
        ISLANDS = 2;
        MARINE = 3;
    }
    Filter filter = 1;
}
